# BowlingGame

./: CMakeLists.txt  README.md  bowling_game.cpp
include/: bowling_game.h
src/: bowling_game.cpp  main.cpp
tests/: bowling_game_tests.cpp
